
Bugs fixes:
  - Return unique filenames from Linux listener (Marian Schubert)
  - Guard.get_guard_class return wrong class when loaded nested class. (koshigoe)

== 0.3.0 (Jan 19, 2011)

== Jan 19, 2011 [by thibaudgg]

Features:
- The whole directory are now watched after that run_on_change was launched on all guards to detect new files modifications.

== Dec 17, 2010 [by netzpirat]

Features:
- New DSL method: `group` allows you to group several guards.
- New CLI option: `--group group_name` to specify certain groups of guards to start.

== Dec 16, 2010 [by rymai]

Features:
- 'watch' patterns are now more strict: Strings are matched with '==', Regexp are matched with Regexp#match.
- A deprecation warning is displayed if your Guardfile contains String that look like Regexp (bad!).

== Nov 26, 2010 [by rymai]

Features:
- It's now possible to return an enumerable in the 'watch' optional blocks in the Guardfile.

Specs:
- Guard::Watcher

Bugs fixes:
- Avoid launching run_on_change guards method when no files matched. --clear guard argument is now usable.

== 0.2.2 (Oct 25, 2010)

Bugs fixes:

- Avoid creating new copy of fsevent_watch every time a file is changed. (issue #5)

== 0.2.1 (Oct 24, 2010)

Bugs fixes:

- Fixes for Linux support

== 0.2.0 (Oct 21, 2010)

Bugs fixes:

- Fixes for 1.8.6 compatibility (issue #2)
- guard init <guard-name> no more need Gemfile presence but open_gem is required now (issue #3)
- Removes growl & libnotify dependencies

== 0.2.0.beta.1 (Oct 17, 2010)

Features:

- Improved listeners support (rb-fsevent & rb-inotify)
- Added polling listening fallback