@@ -2,6 +2,7 @@
 Bugs fixes:
   - Return unique filenames from Linux listener (Marian Schubert)
   - Guard.get_guard_class return wrong class when loaded nested class. (koshigoe)
+  - Fixed open-gem/gem_open dependency problem by using `gem which` to locate guards gem path
 
 == 0.3.0 (Jan 19, 2011)
 
